# spin

./: .README.md.swp  .gitignore  AppServer.h  BluetoothHandler.cpp  BluetoothHandler.h  CMakeLists.txt  Controller.cpp  Controller.cpp~  Controller.h  DefaultMovement.cpp  DefaultMovement.h  Gonio.cpp  Gonio.h  ICommand.cpp  ICommand.h  IMovement.h  INSTALL_INSTRUCTIONS  INSTALL_INSTRUCTIONS~  LICENSE  Makefile  Monitor.cpp  Monitor.h  README.md  README.md~  SensorData.cpp  SensorData.h  ServerHandler.cpp  ServerHandler.h  Servo.cpp  Servo.h  ServoDriver.cpp  ServoDriver.h  Vision.cpp  Vision.h  WalkCommand.cpp  cmake_install.cmake  main.cpp  makefile  makefile~  sensorData.cpp  (+1 more)
Commands/: BalloonCommand.cpp  BalloonCommand.h  DanceCommand.cpp  DanceCommand.h  GapCommand.cpp  GapCommand.cpp~  GapCommand.h  GateCommand.cpp  GateCommand.h  GrindCommand.cpp  GrindCommand.h  ICommand.h  LimboCommand.cpp  LimboCommand.h  PoleCommand.cpp  PoleCommand.cpp~  PoleCommand.h  RaceCommand.cpp  RaceCommand.h  SettingsCommand.cpp  SettingsCommand.h  WalkCommand.cpp  WalkCommand.h
Models/: BluetoothData.h  ControlData.h  Leg.cpp  Leg.h  SensorData.h  Servo.h
Movements/: DefaultMovement.cpp  DefaultMovement.h  IMovement.cpp  IMovement.h
csv/: balloonInit.csv  dans.csv  dansInit.csv  opstaan.csv  vooruitlopenpoortje.csv  vooruitlopenpoortjeInit.csv  zijwaardsInit.csv
include/: dynamixel.h
